--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --watch"
+    "dev": "webpack",
+    "start": "webpack-dev-server --hot"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,9 @@
     "webpack-dev-middleware": "^1.2.0",
     "webpack-dev-server": "^1.14.0",
     "webpack-hot-middleware": "^2.2.0"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1"
   }
 }
